# WgEcu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.ps1
Application/: App.cpp  App.h  CMakeLists.txt  CalibrationDef.h  CommTask.cpp  CommTask.h  RealTimeData.cpp  RealTimeData.h  main.cpp
GeneratedCode/: .cproject  .gitignore  .project  CMakeLists.txt  CanGps.mex  WgEcu.mex
GeneratedCode/board/: CMakeLists.txt  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c
toolchain/: toolchain.cmake
